# shaosongmap

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt  无标题-2026-05-28-1502.excalidraw
.claude/: settings.json
.github/workflows/: test.yml
data/chgis_v6/: chgis_v6_points.csv
mcp_server/: qwen_mcp_server.py
openspec/: project.md
openspec/changes/2026-05-22-comment-marker-cleaning/: design.md  proposal.md
openspec/changes/ancient-map-visual-style/: design.md  proposal.md
openspec/changes/dual-place-name-labels/: design.md  proposal.md  tasks.md
openspec/changes/frontend-canvas-react/: design.md  proposal.md  tasks.md
openspec/changes/page-interaction-redesign/: proposal.md
openspec/changes/refactor-unit-offset-to-frontend/: design.md  proposal.md  tasks.md
openspec/changes/screenshot-ocr-support/: proposal.md
openspec/changes/simplify-static-map/: proposal.md  tasks.md
openspec/changes/unit-banner-markers/: proposal.md  tasks.md
openspec/specs/api-error-response-standard/: spec.md
openspec/specs/api-rate-limiting/: spec.md
openspec/specs/api-versioning/: spec.md
openspec/specs/basemap-provider/: spec.md
openspec/specs/campaign-map-rendering/: spec.md
openspec/specs/campaign-text-extraction/: spec.md
openspec/specs/canvas-unit-renderer/: spec.md
openspec/specs/cdn-integrity/: spec.md
openspec/specs/chgis-data-pipeline/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/code-quality-config/: spec.md
openspec/specs/comic-style-tactical-theme/: spec.md
openspec/specs/configuration-validation/: spec.md
scripts/: automate_review.py  build_chgis.py  code_review.py  describe.py  export-requirements.sh  full_audit.py  selftest.py  vision.py
shaosongmap/: __init__.py  config.py  extractor.py  geocoder.py  metrics.py  models.py  ocr.py  schemas.py  utils.py
shaosongmap/routers/: extract.py  health.py  ocr.py  render.py
shaosongmap/services/: geo.py  geojson.py  pipeline.py  unit_banner.py
static/: debug-styles.html  debug-terrain.html  index.html
static/css/: map.css
static/js/: app.js  canvasRenderer.js  map.js  tacticalRenderer.js  terrainRenderer.js  utils.js
tests/: conftest.py  test_api.py  test_api_batch_ocr.py  test_api_ocr.py  test_api_render.py  test_api_sse.py  test_extractor.py  test_force_unit.py  test_frontend_utils.py  test_geo.py  test_geocoder.py  test_geojson.py  test_ocr.py  test_ocr_merge.py  test_timeline.py  test_unit_banner.py
(+225 files in other folders)
