[project]
name = "shaosongmap"
version = "0.1.0"
description = "让历史小说读者「边读边看地图」——输入战役段落，生成古代地图"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "donglongjun" }]
keywords = ["history", "map", "chgis", "song-dynasty", "ocr"]
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "httpx>=0.28.1",
    "openai>=1.58.1",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "Pillow>=11.1.0",
    "numpy>=2.0",
    "paddlepaddle>=3.1.1",
    "paddleocr>=3.2.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "python-json-logger>=4.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
ci = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shaosongmap*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
exclude = [".venv/", "__pycache__/"]

[tool.ruff.lint.per-file-ignores]
"shaosongmap/routers/ocr.py" = ["B008"]
"shaosongmap/extractor.py" = ["E402"]
"shaosongmap/geocoder.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["shaosongmap"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
warn_redundant_casts = true
exclude = [".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["shaosongmap"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
